# combidata

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
Cases/: index.html
Combination/: index.html
DataGenerator/: index.html
Installation/: index.html
Process/: index.html
QSG/: index.html
ReleaseNotes/: index.html
combidata/: __init__.py
combidata/classes/: case.py  combination.py  data_generator.py  mul_dim_graph.py  process.py
combidata/funcs/: exeptions.py  form_and_combine.py
combidata/processes/: combine.py  form.py  genetate.py
docs/: Cases.md  Combination.md  DataGenerator.md  Installation.md  Process.md  QSG.md  ReleaseNotes.md  index.md
search/: search_index.json
site/: 404.html  index.html
site/Cases/: index.html
site/Combination/: index.html
site/DataGenerator/: index.html
site/Installation/: index.html
site/Process/: index.html
site/QSG/: index.html
site/search/: search_index.json
tests/: test_generator.py
