[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "combidata"
description = "Package for random data generation, combination and data prepare for tests"
keywords = [
    "QA",
    "SET",
    "random data generation",
    "testing API",
    "testing",
    "autotesting"
]
urls = {Homepage = "https://github.com/Warrfie/combidata"}
authors = [{name = "MaximKuklikov(Warrfie)", email = "warrfie@gmail.com"}]
requires-python = ">=3.10"
version="0.1.3"
